data/derived/sp14/progs/unify/prog4087.ml.out
Characters 55-68:
  | _  -> digitsOfInt n/10 @  [n%10];;
          ^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
